--- a/portfolio/src/pages/home.css
+++ b/portfolio/src/pages/home.css
@@ -1,10 +1,20 @@
 .home-container{
-    background-image: url('https://images.unsplash.com/photo-1480506132288-68f7705954bd?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cG9ydGZvbGlvJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D');
+    background-image: url('../assets/bg-home.jpg');
     height: 100vh;
     background-size: cover;
     object-fit: cover;
     background-position: center;
+
     
     
+    
+}
+.about-container{
+    background-image: url('../assets/bg-home.jpg');
+    /* height: 100vh; */
+    background-size: cover;
+    object-fit: cover;
+    background-position: center;
+
     
 }
